Refactor: Remove redundant `Build.VERSION.SDK_INT` check in `SamsungHomeBadger` and simplify `getSupportLaunchers`.